# rp2040_rust_playground

./: CODE_OF_CONDUCT.md  LICENSE  README.md
bootsel/: Cargo.toml  README.md  build.rs  link.ram.x
bootsel/.cargo/: config.toml
bootsel/src/: main.rs
dvi/: Cargo.toml  Embed.toml  README.md  build.rs
dvi/.cargo/: config.toml
dvi/src/: lib.rs  main.rs
embassy_badger2040_blocking/: Cargo.toml
embassy_badger2040_blocking/src/: main.rs
embassy_rp_run_from_ram/: Cargo.toml  build.rs  rust-toolchain.toml
embassy_rp_run_from_ram/src/: main.rs
lcd_round_rat/: Cargo.toml  build.bat
lcd_round_rat/.cargo/: config.toml
lcd_round_rat/src/: main.rs
pico_display_rp2350_ratatui/: Cargo.toml
pico_display_rp2350_ratatui/src/: main.rs
pimoroni_pico_display/: Cargo.toml
pimoroni_pico_display/.cargo/: config.toml
pimoroni_pico_display/src/: main.rs
pimoroni_pico_display_mipidsi/: Cargo.toml  README.md
pimoroni_pico_display_mipidsi/.cargo/: config.toml
pimoroni_pico_display_mipidsi/src/: main.rs
pimoroni_pico_display_rp2350/: Cargo.toml  Embed.toml  build.rs
pimoroni_pico_display_rp2350/.github/workflows/: ci_checks.yml
pimoroni_pico_display_rp2350/src/: main.rs
pimoroni_unicorn/: Cargo.toml
pimoroni_unicorn/src/: main.rs
pimoroni_unicorn_pio/: Cargo.toml  README.md
pimoroni_unicorn_pio/src/: lib.rs  main.rs  pico_unicorn.pio
pimoroni_unicorn_pio_rp2350/: Cargo.toml
pimoroni_unicorn_pio_rp2350/.cargo/: config.toml
pimoroni_unicorn_pio_rp2350/src/: lib.rs  main.rs
pimoroni_unicorn_plasma/: Cargo.toml
pimoroni_unicorn_plasma/src/: main.rs
pimoroni_unicorn_plasma_dma/: Cargo.toml
pimoroni_unicorn_plasma_dma/src/: buttons.rs  lib.rs  main.rs
ws2812_8x8/: Cargo.toml  README.md
ws2812_8x8/src/: main.rs
