[package]
edition = "2021"
name = "lcd_round_rat"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }

# defmt = "1"
# defmt-rtt = "1"
# panic-probe = { version = "1", features = ["print-defmt"] }

rp2040-panic-usb-boot = "*"

# If you're not going to use a Board Support Package you'll need these:
rp2040-hal = { version="0.11", features=["rt", "critical-section-impl", "rom-v2-intrinsics", "rom-func-cache"] }
rp2040-boot2 = "0.3"
gc9a01a_driver = "1.0.0"
embedded-graphics = "0.8.1"
fugit = "0.3.7"
embedded-alloc = "0.6.0"
mousefood = { git = "https://github.com/j-g00da/mousefood", rev="2c78249e169312a91482d0aac23337c687cf0dfa", default-features = false, features = ["fonts"]}
portable-atomic = { version = "*", features = ["critical-section"]}
ratatui = { version = "0.30.0-alpha.5", default-features = false }

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3

[patch.crates-io]
kasuari = { git = "https://github.com/9names/kasuari", branch = "portable_atomic" }
