[package]
edition = "2024"
name = "pico-display-rp2350-ratatui"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }

defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

# We're using a Pico 2 by default on this template
#rp-pico2 = "0.9" # TODO: Do we have that crate already ?

# If you're not going to use a Board Support Package you'll need these:
rp235x-hal = { version = "0.3", features = [
    "rt",
    "critical-section-impl",
    "binary-info",
] }
embedded-graphics = { version = "0.8.1", features = ["defmt"] }
mipidsi = "0.9.0"
# display-interface-spi = "0.5.0"
embedded-hal-bus = { version = "0.3.0", features = ["defmt-03"] }

mousefood = { git = "https://github.com/j-g00da/mousefood", rev="2c78249e169312a91482d0aac23337c687cf0dfa", default-features = false, features = ["fonts"]}
portable-atomic = { version = "*", features = ["critical-section"]}
ratatui = { version = "0.30.0-alpha.5", default-features = false }
embedded-alloc = "0.6.0"

# cargo build/run
[profile.dev]
debug = 2
debug-assertions = true
opt-level = 2
overflow-checks = true

# cargo build/run --release
[profile.release]
debug = 2
debug-assertions = false
lto = 'fat'
opt-level = 2
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 0

[profile.release.build-override]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 0

# cargo test
[profile.test]
debug = 2
debug-assertions = true
opt-level = 2
overflow-checks = true

# cargo test --release
[profile.bench]
debug = 2
debug-assertions = false
lto = 'fat'
opt-level = 3
