[package]
edition = "2024"
name = "pimoroni_unicorn_pio_rp2350"
version = "0.1.0"
license = "MIT OR Apache-2.0"

[dependencies]
cortex-m = "0.7"
cortex-m-rt = "0.7"
embedded-hal = { version = "1.0.0" }

defmt = "1"
defmt-rtt = "1"
panic-probe = { version = "1", features = ["print-defmt"] }

rp235x-hal = { version = "0.3", features = [
    "rt",
    "critical-section-impl",
    "binary-info",
] }

embedded-graphics = "0.8"
embedded-graphics-core = { version = "0.4", optional = true }

pio = "0.2"
pio-proc = "0.2"
static_cell = "2.1.1"

[features]
default = ["graphics"]
graphics = ["embedded-graphics-core"]

# cargo build/run
[profile.dev]
debug = 2
debug-assertions = true
opt-level = 2
overflow-checks = true

# cargo build/run --release
[profile.release]
debug = 2
debug-assertions = false
lto = 'fat'
opt-level = 2
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 0

[profile.release.build-override]
debug = false
debug-assertions = false
overflow-checks = false
opt-level = 0

# cargo test
[profile.test]
debug = 2
debug-assertions = true
opt-level = 2
overflow-checks = true

# cargo test --release
[profile.bench]
debug = 2
debug-assertions = false
lto = 'fat'
opt-level = 3
