[package]
authors = ["9names"]
edition = "2021"
readme = "README.md"
name = "pimoroni_unicorn_plasma_dma"
description = "plasma effect on a pimoroni pico unicorn using pio and dma"
version = "0.1.0"

[dependencies]
cortex-m = "0.7.3"
cortex-m-rt = "0.7.0"
embedded-hal = { version = "0.2.5", features = ["unproven"] }
embedded-time = "0.12.0"

defmt = "=0.3.2"
defmt-rtt = "0.4.0"
panic-probe = { version = "0.3.0", features = ["print-defmt"] }

rp2040-hal = { version = "0.8.1", features = [
    "defmt",
    "critical-section-impl",
] }
rp2040-boot2 = "0.2"
pio = "0.2"
pio-proc = "0.2"
embedded-graphics = "0.7.1"
embedded-graphics-core = { version = "0.3.3", optional = true }
embedded-text = "0.5.0"

micromath = "2.0"

[features]
default = ["graphics"]
graphics = ["embedded-graphics-core"]

# cargo build/run
[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false

# do not optimize proc-macro crates = faster builds from scratch
[profile.dev.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

[profile.release.build-override]
codegen-units = 8
debug = false
debug-assertions = false
opt-level = 0
overflow-checks = false

# cargo test
[profile.test]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo test --release
[profile.bench]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
